[package]
name = "dualshock-auto-disconnect"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btpad-autodisconnect"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
evdev = { version = "0.12", features = ["tokio"] }
zbus = "4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
